# Bridge

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  build_files.sh  pyproject.toml  pytest.ini  test.http  versel.json
.github/workflows/: Deploy.yml  Django tests.yml  Run container.yaml  Test ruff.yml  Update submodules.yaml  pytest.yml
backend/: Dockerfile  Makefile  develop.txt  pyproject.toml  ruff.toml
backend/api/: apps.py  urls.py  views.py
backend/api/v1/: filters.py  mixins.py  paginations.py  serializers.py  urls.py  views.py
backend/candidate/: admin.py  apps.py  factories.py  models.py  validators.py
backend/candidate/migrations/: 0001_initial.py  0001_profession_tech_town_models.py  0001_users_model.py  0002_region_distinct_optional.py  0003_employment_candidate_created_date_candidate_photo_and_more.py  0004_candidate_experience_candidate_first_name_and_more.py  0005_alter_candidate_photo_alter_candidate_resume.py  0007_merge_20231027_1534.py  (+2 more)
backend/core/: settings.py  settings_for_tests.py  urls.py  wsgi.py
backend/fixtures/: candidate.json  cities.json  data.json  employments.json  profession.json  tech_emp.json
backend/tests/: fixtures.py  test_models.py  test_views.py
backend/users/: admin.py  apps.py  models.py  serializers.py
backend/vacancy/: admin.py  apps.py  models.py
infra/deploy/: docker-compose.yaml  nginx.conf
infra/dev/: .dockerignore  dev.Dockerfile  docker-compose.local.yaml  docker-compose.stage.yaml  nginx.conf
requirements/: develop.txt
(+12 files in other folders)
